# mcp-server-template

./: .gitignore  About.md  README.md  mcp.json  pyproject.toml
docs/: README.md
src/my_module/: __init__.py  core.py  main.py
tests/: test_core.py
