[project]
name = "my-module"
version = "0.1.0"
description = "Template MCP server. Replace this with a 2-3 sentence description of what your MCP does."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
my-module = "my_module.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_module"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
